# verilator-mem-if

./: README.md  pyproject.toml  setup.cfg
scripts/gdb/: custom_gdb_extensions.py  gdbinit
src/verilator_mem_if/: __init__.py  backdoor.py  backdoor_memory_interface.py  veriloghex.py
